--- a/app/views/admin/form_add_noticia.ejs
+++ b/app/views/admin/form_add_noticia.ejs
@@ -8,7 +8,17 @@
 
 		<h1>Adicionar notícia</h1>
 		<br/>
-
+		
+		<% if (typeof validacao !== 'undefined'){ %>		
+			<ul>
+				<% for(var i = 0; i < validacao.length; i++) { %>
+					<li>
+						<%= validacao[i].msg %>
+					</li>
+				<% } %>			
+			</ul>
+		<% } %>
+		
 		<form action="/noticias/salvar" method="post">
 			<label>Título</label>			
 			<input type="text" id="titulo" name="titulo" placeholder="Título da Notícia"/>
